[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/Pause/Options/OptionsNormal.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://UI/Pause/MainMenu/MainMenuFocus.png" type="Texture" id=4]
[ext_resource path="res://UI/Pause/MainMenu/MainMenuNormal.png" type="Texture" id=5]
[ext_resource path="res://UI/Pause/Redo/RedoNormal.png" type="Texture" id=6]
[ext_resource path="res://UI/Pause/Options/OptionsFocus.png" type="Texture" id=7]
[ext_resource path="res://UI/Pause/Resume/ResumeNormal.png" type="Texture" id=8]
[ext_resource path="res://UI/Pause/Resume/ResumeFocus.png" type="Texture" id=9]
[ext_resource path="res://UI/Pause/Redo/RedoFocus.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.05176e-05
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -100.0
margin_right = 180.0
margin_bottom = 100.0
color = Color( 0.137255, 0.141176, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_right = 168.0
margin_bottom = 200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="ColorRect/ColorRect2/HBoxContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 168.0
margin_bottom = 53.0
focus_neighbour_left = NodePath("../MainMenu")
focus_neighbour_top = NodePath("../MainMenu")
focus_neighbour_right = NodePath("../Redo")
focus_neighbour_bottom = NodePath("../Redo")
focus_next = NodePath("../Redo")
focus_previous = NodePath("../MainMenu")
texture_normal = ExtResource( 8 )
texture_focused = ExtResource( 9 )

[node name="Redo" type="TextureButton" parent="ColorRect/ColorRect2/HBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 168.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Resume")
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 10 )

[node name="Options" type="TextureButton" parent="ColorRect/ColorRect2/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 102.0
margin_right = 168.0
margin_bottom = 143.0
focus_neighbour_top = NodePath("../Redo")
focus_neighbour_bottom = NodePath("../MainMenu")
focus_next = NodePath("../MainMenu")
focus_previous = NodePath("../Redo")
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 7 )

[node name="MainMenu" type="TextureButton" parent="ColorRect/ColorRect2/HBoxContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 168.0
margin_bottom = 188.0
focus_neighbour_left = NodePath("../Options")
focus_neighbour_top = NodePath("../Options")
focus_neighbour_right = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Resume")
focus_next = NodePath("../Resume")
focus_previous = NodePath("../Options")
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="ColorRect/ColorRect2/HBoxContainer"]
margin_left = 188.0
margin_right = 360.0
margin_bottom = 200.0
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
[connection signal="pressed" from="ColorRect/ColorRect2/HBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/ColorRect2/HBoxContainer/VBoxContainer/Redo" to="." method="_on_Redo_pressed"]
[connection signal="pressed" from="ColorRect/ColorRect2/HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
